--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,12 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "allowJs": true,
     "baseUrl": ".",
     "types": [
       "webpack-env",
-      "jest"
+      "jest",
+      "src/@types/"
     ],
     "paths": {
       "@/*": [
