--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^1.7.4",
     "core-js": "^3.6.5",
+    "onegraph-auth": "^3.3.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
