--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "core-js": "^3.6.5",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "jwt-decode": "^3.1.2",
     "onegraph-auth": "^3.3.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.7",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^4.2.1",
     "vuetify": "^2.4.6",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
