--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 .DS_Store
 node_modules
 /dist
+apollo.config.js
 
-
-# local env files
-.env.local
-.env.*.local
 
 # Log files
 npm-debug.log*
@@ -21,3 +18,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.local
